--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@joseaburt/event-bus",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "author": {
     "name": "Jose Aburto",
@@ -13,6 +13,14 @@
     "dist",
     "src"
   ],
+  "homepage": "https://github.com/PinoFlores/event-bus#readme",
+  "bugs": {
+    "url": "https://github.com/PinoFlores/event-bus/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PinoFlores/event-bus.git"
+  },
   "scripts": {
     "analyze": "size-limit --why",
     "build": "dts build",
